<resources>
    <string name="app_name">VendoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_now">Shop now</string>
    <string name="top_brands">Top Brands</string>
    <string name="more">More</string>
    <string name="for_you">For you</string>
    <string name="home_nav">Home</string>
    <string name="category_nav">Category</string>
    <string name="like_nav">Like</string>
    <string name="cart_nav">Cart</string>
    <string name="profile_nav">Profile</string>
    <string name="search_home">Search</string>
    <string name="back_btn_filterpage">Back</string>
    <string name="filter_txt_filterpage">Filter</string>
    <string name="gender">Gender</string>
    <string name="vendo">Vendo</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>
    <string name="ask_question">Ask question</string>
    <string name="select_color">Select Color:</string>
    <string name="select_size">Select Size:</string>
    <string name="shipping">Shipping</string>
    <string name="return1">Return</string>
    <string name="free_shipping">Free shipping</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="customer_detail">Customer Detail</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="my_full_address">My full address</string>
    <string name="save_adress">Save adress</string>
    <string name="addresses">Addresses</string>
    <string name="add_new_address">Add new address</string>
    <string name="my_cart">My cart</string>
    <string name="checkout">Checkout</string>
    <string name="order_summary">Order Summary</string>
    <string name="items">Items</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="search_icon">Search icon</string>
    <string name="search">Search</string>
    <string name="your_passsword_has_been_changed">Your passsword has been changed</string>
    <string name="log_in">Log in</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="number">Number</string>
    <string name="order_details">Order Details</string>
    <string name="delivery_inclued">Delivery inclued</string>
    <string name="back">Back</string>
    <string name="filter">Filter</string>
    <string name="expand">Expand</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="child">Child</string>
    <string name="categories">Categories</string>
    <string name="accessories">Accessories</string>
    <string name="clothing">Clothing</string>
    <string name="beauty">Beauty</string>
    <string name="electronics">Electronics</string>
    <string name="size">Size</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="apply_filter">Apply filter</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_adress">Email address</string>
    <string name="send_otp">Send OTP</string>
    <string name="back_to">Back to</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="other_choice">Other choice</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="no_account">No Account?</string>
    <string name="signup">SignUp</string>
    <string name="my_orders">My Orders</string>
    <string name="my_returns">My Returns</string>
    <string name="women_manfi_fashion_fashinon_fashion_fash">Women manfi fashion fashinon fashion fash...</string>
    <string name="brown_l">Brown/L</string>
    <string name="_1_item">1 item</string>
    <string name="set_new_password">Set New Password</string>
    <string name="please_set_new_password_and">Please set new password and</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="we_have_sent_sms_code_to_your_mobile_phone_number_994001234567">We have sent SMS code to your mobile phone number: +994001234567</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="didn_t_receive_a_code">Didn’t receive a code?</string>
    <string name="request_again">Request again</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_new_card">Add new card</string>
    <string name="your_payment_is_successful">Your Payment is Successful</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="update">Update</string>
    <string name="my_payment_methods">My Payment Methods</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur. Commodo aenean congue enim ultrices feugiat molestie. Dolor sit enim ridiculus in vitae vel ipsum facilisi tempor. Sed lobortis ullamcorper elementum amet. Mi ipsum tellus in quam blandit interdum eros lorem augue. Eu amet mattis id id pulvinar. Est at ultricies odio elementum. Gravida sed ultricies a malesuada libero. Est ut sit elementum sit congue magna bibendum. Eget proin egestas non eu. Ultrices nisi nulla id nulla sagittis quis.Id tortor arcu justo consequat sit at. Urna quis in cursus ultricies. Id pretium viverra nunc sagittis. Cras elit et varius eros vestibulum eget lectus. Aliquam pharetra blandit purus urna massa. Ultrices pharetra fermentum quam vestibulum a lorem tellus. Facilisis enim penatibus mauris tellus. Purus metus odio sed nisl. Pulvinar vel dictum eget nunc pellentesque sagittis nulla.Diam enim egestas placerat vitae proin mi. Vestibulum lacus vitae velit sodales est nibh. Enim vel id et massa massa pretium lorem. Augue nec et gravida quam viverra eu duis amet. Sem ac mi diam pulvinar porttitor gravida sem a massa. Arcu et malesuada suspendisse nunc ipsum. Facilisi ultrices fringilla eget sapien eu. Pellentesque vitae nullam malesuada congue pharetra auctor lectus. Et suspendisse mi pulvinar sem et nunc purus. Urna cursus vel ut non lectus eu pellentesque. Id tellus in arcu tristique etiam. Metus a tempus et amet amet accumsan ac risus sit. Purus facilisi cras diam fermentum volutpat sed.Amet nunc nibh nulla sit morbi vitae auctor. Volutpat nisi ac sed urna sagittis elit ipsum odio non. Adipiscing adipiscing faucibus nulla volutpat cursus donec. A eget augue sagittis id. Ante elit mattis justo tristique scelerisque scelerisque fames sagittis. Pharetra eget nisl eget arcu facilisis. Sit venenatis erat purus adipiscing dolor scelerisque congue. Nisl aliquam mi vitae massa cras vivamus egestas. Tortor varius consequat pellentesque pulvinar.</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="phone">Phone</string>
    <string name="selected">Selected</string>
    <string name="completed">Completed</string>
    <string name="color_variant">Color variant</string>
    <string name="product_image">Product image</string>
    <string name="add_photo">+ Add Photo</string>
    <string name="toast_max_photos">You can add up to 3 photos only</string>
    <string name="max_3_photos">Max 3 photos</string>
    <string name="your_review_is_very_important_for_us">Your review is very important for us</string>
    <string name="submit">Submit</string>
    <string name="reason_damaged">Product was damaged</string>
    <string name="reason_no_need">No longer needed</string>
    <string name="reason_bad_condition">Bad condition</string>
    <string name="reason_duplicate">Duplicate reason</string>
    <string name="user_id_not_found">User ID not found</string>
    <string name="no_name">No Name</string>
    <string name="full_name_empty">Full name cannot be empty</string>
    <string name="profile_updated">Profile updated</string>
    <string name="error">Error</string>
    <string name="email_and_password_cannot_be_empty">Email and password cannot be empty</string>
    <string name="login_successful">Login successful</string>
    <string name="something_went_error">Something went error</string>
    <string name="fullname_can_t_be_empty">FullName can\'t be empty</string>
    <string name="email_can_t_be_empty">Email can\'t be empty</string>
    <string name="password_can_t_be_empty">Password can\'t be empty</string>
    <string name="qeydiyyat_u_urlu">Qeydiyyat uğurlu!</string>
    <string name="your_review">Your Review</string>
    <string name="home_page">Home page</string>
    <string name="track_my_order">Track my order</string>
    <string name="avatar_updated">Avatar Updated</string>
    <string name="reason_for_return">Reason for return</string>
    <string name="choose_a_return_reason">Choose a return reason</string>
</resources>