<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vendo"
        android:textSize="16sp"
        android:layout_marginTop="39dp"
        android:textColor="@color/black"
        android:fontFamily="@font/dmsanssemibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_log_out"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/dmsansmedium"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="53dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_out"
            android:fontFamily="@font/dmsanssemibold"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_marginEnd="7dp"
            android:textColor="@color/black"
            app:cornerRadius="8dp"
            app:strokeColor="@color/black"
            android:backgroundTint="@color/white"
            app:strokeWidth="1dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/dmsanssemibold"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
