<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.successfulpayment.PaymentSuccessful">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/successful"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_payment_is_successful"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:fontFamily="@font/dmsanssemibold"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheckOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/track_my_order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:cornerRadius="8dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/dmsanssemibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/home_page"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:strokeWidth="1dp"
        android:layout_marginHorizontal="16dp"
        app:strokeColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/dmsanssemibold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline" />

</LinearLayout>